--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,43 +2,56 @@
 const { title } = Astro.props;
 
 import Navbar from "../components/Navbar.astro";
+import Navbarbottom from "../components/Navbar.svelte";
+
 
 const description = "Kerala Startup Mission is the central agency of the Government of Kerala for entrepreneurship development and incubation activities in Kerala, India.";
 const url = "https://startupmission.kerala.gov.in/";
 
 ---
-
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="/favicon.png" />
-		
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
 
-		<!-- Primary Meta Tags -->
-		<meta name="title" content={title} >
-		<meta name="description" content={description}>
+<html >
 
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website">
-		<meta property="og:url" content={url}>
-		<meta property="og:title" content={title}>
-		<meta property="og:description" content={description}>
-		<meta property="og:image" content={url + 'img/fb_image.jpg'}>
+<head>
+    <meta charset="utf-8">
+    <title>LEAP | KERALA STARTUP MISSION</title>
 
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content={url}>
-		<meta property="twitter:title" content={title}>
-		<meta property="twitter:description" content={description}>
-		<meta property="twitter:image" content={url + 'img/fb_image.jpg'}>
+    <meta name="author" content="KSUM">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	</head>
-	<body>
-		<Navbar></Navbar>
+    <link rel="stylesheet" href="/app/css/app.css">
+    <link rel="stylesheet" href="/app/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="/app/css/textanimation.css">
+
+    <!-- Favicon and Touch Icons  -->
+    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="/favicon.png">
+	<link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+
+
+</head>
+
+<body class="body header-fixed counter-scroll">
+
 		<slot />
+
+		
+
+		<script src="/app/js/jquery.min.js" is:inline></script>
+		<script src="/app/js/jquery.easing.js" is:inline></script>
+		<script src="/app/js/jquery.nice-select.min.js" is:inline></script>
+		<script src="/app/js/bootstrap.min.js" is:inline></script>
+		<script src="/app/js/countto.js" is:inline></script>
+		<script src="/app/js/swiper-bundle.min.js" is:inline></script>
+		<script src="/app/js/swiper.js" is:inline></script>
+		<script src="/app/js/price-ranger.js" is:inline></script>
+		<script src="/app/js/textanimation.js" is:inline></script>
+		<script src="/app/js/plugin.js" is:inline></script>
+		<script src="/app/js/jquery.fancybox.js" is:inline></script>
+		<script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js" is:inline></script>
+
+	
 	</body>
-</html>
+	
+	</html>
